# bf-asm

./: .hgignore  CMakeLists.txt  LICENSE  README.md  valgrind.sh
bfa/: CMakeLists.txt  main.cpp
bfi/: CMakeLists.txt  main.cpp
scripts/: greater.fbasm  help.txt  log2.fbasm  main.fbasm  main2.fbasm  pow.fbasm
testing/: CMakeLists.txt  googletest_main.cpp
